# intake_agent

./: README.md  docker-compose.yml  logs.txt  migration_plan.md  voice-assistant-frontend.xml  voice-pipeline-agent.xml
docs/: livekit-agents-python-examples.xml
frontend/: Dockerfile  package.json  pnpm-lock.yaml  repomix-output.xml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/intake/[...path]/: route.ts
frontend/components/: AssistantFab.tsx  ChatPopup.tsx  CloseIcon.tsx  ControlBar.tsx  ListingGrid.tsx  ModeToggle.tsx  TranscriptionView.tsx
frontend/hooks/: useCombinedTranscriptions.ts
frontend/store/: agentStore.ts
voice_agent/: .gitignore  Dockerfile  README.md  agent.py  base_agent.py  main.py  pyproject.toml  requirements.txt  text_agent.py
voice_agent/api/: __init__.py  routes.py
voice_agent/intake_core/: __init__.py  cost_tracking.py  prompts.py  validation.py
