[project]
name = "voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "livekit==1.0.6",
    "livekit-agents==1.0.16",
    "livekit-api==1.0.2",
    "livekit-plugins-assemblyai==1.0.16",
    "livekit-plugins-cartesia==1.0.16",
    "livekit-plugins-deepgram==1.0.16",
    "livekit-plugins-google==1.0.16",
    "livekit-plugins-noise-cancellation==0.2.1",
    "livekit-plugins-openai==1.0.16",
    "livekit-plugins-silero==1.0.16",
    "livekit-plugins-turn-detector==1.0.16",
    "livekit-protocol==1.0.2",
    "python-dotenv~=1.1.0",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
]
